# mem-dumper-zygisk

./: .gitignore  settings.gradle
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  dumper.cpp
app/src/main/cpp/zygisk/: logger.h
gradle/wrapper/: gradle-wrapper.properties
zip/: module.prop
